RESOLVED FIXED152216
Data detector yellow highlight location is vertically mirrored in WebKit1
https://bugs.webkit.org/show_bug.cgi?id=152216
Summary Data detector yellow highlight location is vertically mirrored in WebKit1
Tim Horton
Reported 2015-12-12 15:08:55 PST
Data detector yellow highlight location is vertically mirrored in WebKit1
Attachments
Patch (2.44 KB, patch)
2015-12-12 15:09 PST, Tim Horton
no flags
subwindow dumping patch for safekeeping (15.37 KB, patch)
2015-12-17 11:40 PST, Tim Horton
no flags
Patch (11.96 KB, patch)
2016-01-15 14:10 PST, Tim Horton
bdakin: review+
Tim Horton
Comment 1 2015-12-12 15:09:12 PST
Alexey Proskuryakov
Comment 2 2015-12-12 16:05:13 PST
Comment on attachment 267244 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=267244&action=review > Source/WebKit/mac/ChangeLog:3 > + Data detector yellow highlight location is vertically mirrored in WebKit1 No test?
Tim Horton
Comment 3 2015-12-12 16:15:47 PST
No idea how to test. We could add a way to dump this specific rect at some point, but that would be pretty overly specific to this one patch. Ref/pixel tests won't work because they don't capture subwindows. At the moment we have no tests for TextIndicators in actual use, just some TextIndicator unit-ish tests that wouldn't have hit this. Ideas?
Tim Horton
Comment 4 2015-12-12 16:59:16 PST
Another alternative: an API test where we override NSWindow addChildWindow and dump its properties. Another roadblock: it looks like we don't currently have support for synthetically invoking force-touch in WebKit1. Might be able to trigger it with the keyboard shortcut, though (?)
Darin Adler
Comment 5 2015-12-13 13:46:19 PST
Comment on attachment 267244 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=267244&action=review Test coverage is a good question. > Source/WebKit/mac/WebView/WebImmediateActionController.mm:432 > + RefPtr<TextIndicator> indicator = TextIndicator::createWithRange(*detectedDataRange, TextIndicatorOptionDefault, TextIndicatorPresentationTransition::FadeIn); auto is typically better than RefPtr and it might be Ref; unless this is old and still returns PassRefPtr
Tim Horton
Comment 6 2015-12-16 11:14:46 PST
(In reply to comment #5) > Comment on attachment 267244 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=267244&action=review > > Test coverage is a good question. > > > Source/WebKit/mac/WebView/WebImmediateActionController.mm:432 > > + RefPtr<TextIndicator> indicator = TextIndicator::createWithRange(*detectedDataRange, TextIndicatorOptionDefault, TextIndicatorPresentationTransition::FadeIn); > > auto is typically better than RefPtr and it might be Ref; unless this is old > and still returns PassRefPtr It's not Ref, TextIndicator creation can fail (in a hundred different ways). auto is fine, though.
Tim Horton
Comment 7 2015-12-17 11:39:29 PST
Ugh, I did all the work to do subwindow dumping for WKTR, then realized I needed in in DRT, then realized (again) that we don't have support for synthetic force-click in DRT. I'm just going to land it.
Tim Horton
Comment 8 2015-12-17 11:40:03 PST
Created attachment 267572 [details] subwindow dumping patch for safekeeping
Tim Horton
Comment 9 2015-12-17 11:42:50 PST
Tim Horton
Comment 10 2016-01-15 14:05:23 PST
Reopening for a new patch.
Tim Horton
Comment 11 2016-01-15 14:10:07 PST
WebKit Commit Bot
Comment 12 2016-01-15 14:11:45 PST
Attachment 269097 [details] did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebView.mm:8573: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebView/WebView.mm:8637: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 13 2016-01-22 14:45:46 PST
Note You need to log in before you can comment on or make changes to this bug.