Data detector yellow highlight location is vertically mirrored in WebKit1 https://bugs.webkit.org/show_bug.cgi?id=152216 <rdar://problem/23848003>

Reviewed by Darin Adler.

* WebView/WebImmediateActionController.mm:
(-[WebImmediateActionController _animationControllerForDataDetectedText]):
Match the conversion we do at every other WK1 TextIndicator construction.


Canonical link: https://commits.webkit.org/170498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194221 268f45cc-cd09-0410-ab3c-d52691b4dbfc